--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -182,6 +182,7 @@ jobs:
       WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
       LINUX_CPP_COMPONENTS_WEB: intel.oneapi.lin.dpcpp-cpp-compiler-pro
       MACOS_CPP_COMPONENTS: intel.oneapi.mac.cpp-compiler
+      FC: ifort
 
     steps:
       - name: Checkout repo
@@ -247,21 +248,16 @@ jobs:
       - name: activate intel and test on linux and macOS
         if: runner.os == 'Linux' || runner.os == 'macOS'
         env:
-          FC: ifort
           CC: icc
         run: |
           .github/intel-scripts/${{ matrix.os_script }}
-          pytest -v --dist=loadscope -n=auto -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: activate intel and test on Windows
         if: runner.os == 'Windows'
         env:
-          FC: ifort
           CC: icl
-        shell: cmd
         run: |
-          call ".github/intel-scripts/ifortvars_windows.bat"
-          pytest -v --dist=loadscope -n=auto -m regression --durations=0 --cov=pymake --cov-report=xml autotest/
+          .github/intel-scripts/${{ matrix.os_script }}
 
       - name: Print coverage report before upload
         run: |
