--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,11 @@
 [build-system]
 # Minimum requirements for the build system to execute
-requires = ["setuptools", "wheel"]
+requires = [
+    "setuptools",
+    "wheel",
+    "setuptools_scm[toml]>=3.4",
+    "setuptools_scm_git_archive",
+]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
