--- a/.github/workflows/pymake-linting-install.yml
+++ b/.github/workflows/pymake-linting-install.yml
@@ -77,10 +77,10 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Upgrade pip and install wheel
+      - name: Upgrade pip and install build and twine
         run: |
           python -m pip install --upgrade pip
-          pip install wheel
+          pip install build twine
 
       - name: Base pymake installation
         run: |
@@ -89,4 +89,9 @@ jobs:
       - name: Print pymake version
         run: |
           python -c "import pymake; print(pymake.__version__)"
+
+      - name: Build pymake, check dist outputs
+        run: |
+          python -m build
+          twine check --strict dist/*
 
