--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,14 @@
 name = mfpymake
 version = attr: pymake.config.__version__
 description = pymake is a Python package to compile MODFLOW-based models.
-long_description = file: README.md
+long_description = file: README.md, LICENSE.md
 long_description_content_type = text/markdown
 author = Joseph D. Hughes
 author_email = modflow@usgs.gov
 maintainer = Joseph D. Hughes
 maintainer_email = jdhughes@usgs.gov
 license = CC0
+license_files = LICENSE.md
 platform = Windows, Mac OS-X, Linux
 keywords = MODFLOW, groundwater, hydrogeology
 classifiers =
