--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -22,14 +22,14 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2.3.4
+        uses: uses: actions/checkout@v2.5.0
 
       - name: Setup Graphviz
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4.3.0
         with:
           python-version: 3.9
 
@@ -37,25 +37,8 @@ jobs:
         run: |
           .github/common/install-python.sh
 
-      - name: Setup symbolic link to gfortran on Linux
-        if: runner.os == 'Linux'
-        run: |
-          sudo ln -fs /usr/bin/gfortran-10 /usr/local/bin/gfortran
-          sudo ln -fs /usr/bin/gcc-10 /usr/local/bin/gcc
-          sudo ln -fs /usr/bin/g++-10 /usr/local/bin/g++
-
-      - name: Setup symbolic link to gfortran on macOS
-        if: runner.os == 'macOS'
-        run: |
-          sudo ln -fs /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
-          sudo ln -fs /usr/local/bin/gcc-10 /usr/local/bin/gcc
-          sudo ln -fs /usr/local/bin/g++-10 /usr/local/bin/g++
-
-      - name: Print GNU compiler versions
-        run: |
-          gfortran --version
-          gcc --version
-          g++ --version
+      - name: Install GNU Fortran
+        uses: modflowpy/install-gfortran-action@v1
 
       - name: Download examples for pytest runs
         run: |
@@ -70,7 +53,7 @@ jobs:
           coverage report
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1.0.15
+        uses: codecov/codecov-action@v3.1.1
         with:
           file: ./coverage.xml
 
@@ -87,13 +70,13 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2.5.0
 
       - name: Setup Graphviz
         uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4.3.0
         with:
           python-version: 3.9
 
@@ -126,7 +109,7 @@ jobs:
           coverage report
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1.0.15
+        uses: codecov/codecov-action@v3.1.1
         with:
           file: ./coverage.xml
 
@@ -143,10 +126,10 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2.5.0
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4.3.0
         with:
           python-version: ${{ matrix.python-version }}
 
