--- a/.github/workflows/pymake-gcc.yml
+++ b/.github/workflows/pymake-gcc.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2.5.0
 
-      - name: Setup Graphviz
+      - name: Setup Graphviz on Linux
         if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v1
 
