--- a/.github/workflows/pymake-linting-install.yml
+++ b/.github/workflows/pymake-linting-install.yml
@@ -53,10 +53,10 @@ jobs:
           black --check --diff ./pymake
 
       - name: Run flake8
-        run: flake8 --count --show-source ./pymake
+        run: flake8 --count --show-source --exit-zero ./pymake
 
       - name: Run pylint
-        run: pylint --jobs=0 --errors-only ./pymake
+        run: pylint --jobs=2 --errors-only --exit-zero ./pymake
 
   pymake_setup:
     name: standard installation
