--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,27 +16,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-latest
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+#        include:
+#          - os: ubuntu-latest
 #            os_script: ifortvars_linux.sh
-          - os: macos-latest
+#          - os: macos-latest
 #            os_script: ifortvars_macos.sh
-          - os: windows-2019
+#          - os: windows-2019
 #            os_script: ifortvars_windows.bat
     defaults:
       run:
         shell: bash
-#    env:
-#      WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18976/w_HPCKit_p_2022.3.1.19755_offline.exe
+    env:
+      WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18976/w_HPCKit_p_2022.3.1.19755_offline.exe
 #      LINUX_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18975/l_HPCKit_p_2022.3.1.16997_offline.sh
 #      MACOS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18977/m_HPCKit_p_2022.3.1.15344_offline.dmg
-#      WINDOWS_FORTRAN_COMPONENTS: intel.oneapi.win.ifort-compiler
+      WINDOWS_FORTRAN_COMPONENTS: intel.oneapi.win.ifort-compiler
 #      LINUX_FORTRAN_COMPONENTS_WEB: intel.oneapi.lin.ifort-compiler
 #      MACOS_FORTRAN_COMPONENTS: intel.oneapi.mac.ifort-compiler
-#      WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
+      WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
 #      LINUX_CPP_COMPONENTS_WEB: intel.oneapi.lin.dpcpp-cpp-compiler-pro
 #      MACOS_CPP_COMPONENTS: intel.oneapi.mac.cpp-compiler
-#      FC: ifort
+      FC: ifort
 
     steps:
       - name: Checkout repo
@@ -60,6 +61,7 @@ jobs:
           .github/common/download-examples.sh
 
       - name: Install Intel OneAPI C++ and Fortran compilers
+        if: runner.os != 'Windows'
         uses: modflowpy/install-intelfortran-action@v1
 
 #      - name: cache install intel compilers on linux
@@ -88,22 +90,22 @@ jobs:
 #        if: runner.os == 'macOS' && steps.cache-install-macos.outputs.cache-hit != 'true'
 #        run: |
 #          .github/intel-scripts/install_macos.sh $MACOS_HPCKIT_URL $MACOS_CPP_COMPONENTS:$MACOS_FORTRAN_COMPONENTS
-#
-#      - name: cache install ifort on windows
-#        if: runner.os == 'Windows'
-#        id: cache-install-windows
-#        uses: actions/cache@v2
-#        with:
-#          path: C:\Program Files (x86)\Intel\oneAPI\compiler
-#          key: install-${{ env.WINDOWS_HPCKIT_URL }}-${{ env.WINDOWS_CPP_COMPONENTS }}-${{ env.WINDOWS_FORTRAN_COMPONENTS }}-compiler-${{ hashFiles('**/.github/intel-scripts/cache_exclude_windows.sh') }}
-#
-#      - name: install intel compilers on windows
-#        if: runner.os == 'Windows' && steps.cache-install-windows.outputs.cache-hit != 'true'
-#        run: |
-#          .github/intel-scripts/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_CPP_COMPONENTS:$WINDOWS_FORTRAN_COMPONENTS
-#
+
+      - name: cache install Intel OneAPI compilers on windows
+        if: runner.os == 'Windows'
+        id: cache-install-windows
+        uses: actions/cache@v2
+        with:
+          path: C:\Program Files (x86)\Intel\oneAPI\compiler
+          key: install-${{ env.WINDOWS_HPCKIT_URL }}-${{ env.WINDOWS_CPP_COMPONENTS }}-${{ env.WINDOWS_FORTRAN_COMPONENTS }}-compiler-${{ hashFiles('**/.github/intel-scripts/cache_exclude_windows.sh') }}
+
+      - name: install install Intel OneAPI compilers on windows
+        if: runner.os == 'Windows' && steps.cache-install-windows.outputs.cache-hit != 'true'
+        run: |
+          .github/intel-scripts/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_CPP_COMPONENTS:$WINDOWS_FORTRAN_COMPONENTS
+
 #      - name: activate intel and test on linux and macOS
-#        if: runner.os == 'Linux' || runner.os == 'macOS'
+#        if: runner.os != 'Windows'
 #        env:
 #          CC: icc
 #        run: |
@@ -114,11 +116,20 @@ jobs:
         run: |
           pytest -v -n=auto --dist=loadfile -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
 
-      - name: test on Windows
+      - name: activate intel and test on Windows
         if: runner.os == 'Windows'
+        env:
+          CC: icl
         shell: cmd
         run: |
+          call ".github/intel-scripts/ifortvars_windows.bat"
           pytest -v -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
+
+#      - name: test on Windows
+#        if: runner.os == 'Windows'
+#        shell: cmd
+#        run: |
+#          pytest -v -m="base or regression" --durations=0 --cov=pymake --cov-report=xml autotest/
 
       - name: Print coverage report before upload
         run: |
@@ -128,12 +139,12 @@ jobs:
         uses: codecov/codecov-action@v3.1.1
         with:
           file: ./coverage.xml
-#
-#      - name: exclude unused files from cache on windows
-#        if: runner.os == 'Windows' && steps.cache-install-windows.outputs.cache-hit != 'true'
-#        run: |
-#          .github/intel-scripts/cache_exclude_windows.sh
-#
+
+      - name: exclude unused files from cache on windows
+        if: runner.os == 'Windows' && steps.cache-install-windows.outputs.cache-hit != 'true'
+        run: |
+          .github/intel-scripts/cache_exclude_windows.sh
+
 #      - name: exclude unused files from cache on linux
 #        if: runner.os == 'Linux' && steps.cache-install-linux.outputs.cache-hit != 'true'
 #        run: |
