--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,7 @@ jobs:
             os_script: ifortvars_linux.sh
           - os: macos-latest
             os_script: ifortvars_macos.sh
-#          - os: windows-2019
-          - os: windows-latest
+          - os: windows-2019
             os_script: ifortvars_windows.bat
     defaults:
       run:
