--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,19 +27,19 @@ jobs:
       matrix:
         include:
           # test latest gcc and python
-          - {os: ubuntu-latest, FC: gcc, FC_V: 13}
-          - {os: macos-latest, FC: gcc, FC_V: 13}
-          - {os: windows-latest, FC: gcc, FC_V: 13}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 13, shell: bash}
+          - {os: macos-latest, FC: gcc, FC_V: 13, shell: bash}
+          - {os: windows-latest, FC: gcc, FC_V: 13, shell: pwsh}
           # test latest python and intel-classic
-          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7}
-          - {os: macos-13, FC: intel-classic, FC_V: 2021.7}
-          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7}
+          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          - {os: macos-13, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7, shell: pwsh}
           # test latest python and previous gcc
-          - {os: ubuntu-latest, FC: gcc, FC_V: 12}
-          - {os: ubuntu-latest, FC: gcc, FC_V: 11}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 12, shell: bash}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 11, shell: bash}
     defaults:
       run:
-        shell: bash
+        shell: ${{ matrix.shell }}
 
     steps:
       - name: Checkout repo
@@ -91,7 +91,6 @@ jobs:
 
       - name: test on Windows
         if: runner.os == 'Windows'
-        shell: pwsh
         run: |
           pixi run autotest-base
 
@@ -122,16 +121,16 @@ jobs:
       matrix:
         include:
           # test latest gcc and python
-          - {os: ubuntu-latest, FC: gcc, FC_V: 13}
-          - {os: macos-latest, FC: gcc, FC_V: 13}
-          - {os: windows-latest, FC: gcc, FC_V: 13}
+          - {os: ubuntu-latest, FC: gcc, FC_V: 13, shell: bash}
+          - {os: macos-latest, FC: gcc, FC_V: 13, shell: bash}
+          - {os: windows-latest, FC: gcc, FC_V: 13, shell: pwsh}
           # test latest python and intel
-          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7}
-          - {os: macos-13, FC: intel-classic, FC_V: 2021.7}
-          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7}
+          - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          - {os: macos-13, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7, shell: pwsh}
     defaults:
       run:
-        shell: bash
+        shell: ${{ matrix.shell }}
 
     steps:
       - name: Checkout repo
@@ -170,13 +169,13 @@ jobs:
       - name: Run scheduled tests
         run: |
           pixi run autotest-schedule
-
+  
       - name: Upload failed test output
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: failed-schedule-${{ matrix.os }}-${{ matrix.FC }}-${{ matrix.FC_V }}
-          path: ./autotest/.failed
+          path: autotest/.failed
 
       - name: Print coverage report before upload
         run: |
