--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,16 +27,16 @@ jobs:
       matrix:
         include:
           # test latest gcc and python
-          - {os: ubuntu-latest, FC: gcc, FC_V: 13, shell: bash}
-          - {os: macos-latest, FC: gcc, FC_V: 13, shell: bash}
-          - {os: windows-latest, FC: gcc, FC_V: 13, shell: pwsh}
+          # - {os: ubuntu-latest, FC: gcc, FC_V: 13, shell: bash}
+          # - {os: macos-latest, FC: gcc, FC_V: 13, shell: bash}
+          # - {os: windows-latest, FC: gcc, FC_V: 13, shell: pwsh}
           # test latest python and intel-classic
           - {os: ubuntu-latest, FC: intel-classic, FC_V: 2021.7, shell: bash}
-          - {os: macos-13, FC: intel-classic, FC_V: 2021.7, shell: bash}
-          - {os: windows-2019, FC: intel-classic, FC_V: 2021.7, shell: pwsh}
+          # - {os: macos-13, FC: intel-classic, FC_V: 2021.7, shell: bash}
+          # - {os: windows-2019, FC: intel-classic, FC_V: 2021.7, shell: pwsh}
           # test latest python and previous gcc
-          - {os: ubuntu-latest, FC: gcc, FC_V: 12, shell: bash}
-          - {os: ubuntu-latest, FC: gcc, FC_V: 11, shell: bash}
+          # - {os: ubuntu-latest, FC: gcc, FC_V: 12, shell: bash}
+          # - {os: ubuntu-latest, FC: gcc, FC_V: 11, shell: bash}
     defaults:
       run:
         shell: ${{ matrix.shell }}
