--- a/pixi.toml
+++ b/pixi.toml
@@ -13,7 +13,7 @@ flaky = "*"
 flopy = "*"
 hatchling = ">=1.27.0,<2"
 matplotlib = "*"
-meson = "1.3.0"
+meson = "*"
 modflow-devtools = "*"
 networkx = "*"
 ninja = "*"
