chore: fix typos and add codespell configuration

--- a/.github/workflows/pymake-linting-install.yml
+++ b/.github/workflows/pymake-linting-install.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Check format
         run: pixi run check-format
 
+      - name: Check spelling
+        run: pixi run check-spelling
+
   pymake_setup:
     name: standard installation
     runs-on: ubuntu-latest
