--- a/pixi.toml
+++ b/pixi.toml
@@ -13,7 +13,7 @@ flaky = "*"
 flopy = "*"
 hatchling = ">=1.27.0,<2"
 matplotlib = "*"
-meson = "*"
+meson = ">=1.8.0"
 modflow-devtools = "*"
 networkx = "*"
 ninja = "*"
