--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "numpy",
     "requests",
     "networkx",
-    "meson",
+    "meson>=1.8.0",
     "ninja",
     "pydotplus",
 ]
